--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "LekoArts <hello@lekoarts.de>",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-brands-svg-icons": "^5.4.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "babel-plugin-tailwind": "^0.1.10",
     "emotion": "^9.2.9",
     "emotion-server": "^9.2.9",
