--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "portfolio"
   ],
   "scripts": {
-    "develop": "gatsby develop -o",
+    "dev": "gatsby develop -o",
     "build": "gatsby build",
     "lint": "eslint . --ext .js,.jsx --ignore-path .gitignore",
     "lint:fix": "eslint . --ext .js,.jsx --fix --ignore-path .gitignore",
